--- a/src/lib/stores/config-text.json
+++ b/src/lib/stores/config-text.json
@@ -1,10 +1,10 @@
 {
   "heading": "Carbon intensity of the production of electricty across all EU countries",
   "subheading": "Greenhouse gas emission (GHG) intensity per member states in 2020",
-  "legend1": "No data available",
-  "tooltip1": "of GDP",
+  "legend1": "in carbon dioxide equivalent per kilowatt hour",
+  "tooltip1": "g CO2e/kW h",
   "textSourceDescription": "Source",
-  "textSource": "EEA",
+  "textSource": "EEA: https://www.eea.europa.eu/",
   "textNoteDescription": "Note",
   "textNote": "European Environment Information and Observation Network (Eionet)",
   "textDataAccess": "Access the data",
