--- a/src/lib/stores/config-text.json
+++ b/src/lib/stores/config-text.json
@@ -1,6 +1,6 @@
 {
   "heading": "How high is the carbon footprint of electricity generation in all EU countries?",
-  "subheading": "As of 2022 in the EU27 the Greenhouse gas emission (GHG) intensity in carbon dioxide equivalent per kilowatt hour was 258",
+  "subheading": "As of 2022 in the EU27 the Greenhouse gas emission (GHG) intensity in carbon dioxide equivalent per kilowatt hour was 258. This is an increase of 13.65% to 2020.",
   "legend1": "No data available",
   "tooltip1": "g CO2e/kW h",
   "textSourceDescription": "Source",
