--- a/src/lib/stores/config-text.json
+++ b/src/lib/stores/config-text.json
@@ -1,6 +1,6 @@
 {
-  "heading": "How high is the carbon footprint of electricity generation in all EU countries?",
-  "subheading": "As of 2022 in the EU27 the Greenhouse gas emission (GHG) intensity in carbon dioxide equivalent per kilowatt hour was 258. This is an increase of 13.65% to 2020.",
+  "heading": "What is the carbon footprint of electricity production in the EU?",
+  "subheading": "In 2023, in the European Union, the amount of greenhouse gas emissions per kilowatt-hour of electricity produced was 210 gCO2e/kWh. This represents a 17% reduction compared with 2022 (258 gCO2e/kWh).",
   "legend1": "No data available",
   "tooltip1": "g CO2e/kW h",
   "textSourceDescription": "Source",
